2005-09-20  Alex Roitman  <shura@gramps-project.org>
	* INSTALL: Provide correct examples for the local install.
	* gramps.sh.in: Revert escaping the arguments, as this lumps all
	the args into a single word. If filenames contain spaces then they
	should be escaped by the user.

2005-09-19  Don Allingham  <don@gramps-project.org>
	* src/ReportUtils.py: better string handling
	* doc/gramps-manual/C/getstart.xml: updates from editors
	* doc/gramps-manual/C/mainwin.xml: updates from editors
	* doc/gramps-manual/C/usage.xml: updates from editors

2005-09-15  Don Allingham  <don@gramps-project.org>
	* src/DescendReport.py: fix indentation

2005-09-14  Don Allingham  <don@gramps-project.org>
	* src/CalSdn.py: fix Hebrew date parsing
	* src/DescendReport.py: enhanced to add spouses and places
	* src/ReadGedcom.py: fix forward referencing named notes

2005-09-12  Don Allingham  <don@gramps-project.org>
	* src/NameEdit.py: preserve custom name types
	* src/plugins/ScratchPad.py: handle unicode better
	* src/DdTargets.py: handle unicode better

2005-09-11  Don Allingham  <don@gramps-project.org>
	* src/NameDisplay: include nickname if available
	* src/plugins/ScratchPad.py: Handle null handle

2005-09-10  Don Allingham  <don@gramps-project.org>
	* src/ImageSelect.py: fix adding a new image that is actually
	already in the database.

2005-09-06  Don Allingham  <don@gramps-project.org>
	* src/plugins/NavWebPage.py: suppress dates on list pages for restricted
	people
	* doc/gramps-manual/C/getstart.xml: text and graphics improvements
	* doc/gramps-manual/C/mainwin.xml: text and graphics improvements
	* doc/gramps-manual/C/usage.xml: text and graphics improvements

2005-09-05  Eero Tamminen  <eerot@sf>
	* src/plugins/StatisticsChart.py: string changes
	  "Number of relationship" -> "Number of relationships" (fix)
	  "Marriage age" -> "Age at marriage" (consistency)

2005-09-05  Don Allingham  <don@gramps-project.org>
	* NEWS: update for 2.0.8